# browserlens

./: .gitignore  DESIGN.md  README.md  pyproject.toml
benchmarks/: results.json  run_benchmark.py
browserlens/: __init__.py
browserlens/benchmarks/: __init__.py  comparison.py  latency_tracker.py  token_counter.py
browserlens/compiler/: __init__.py  cache.py  compiler.py  executor.py  healer.py  recorder.py  selectors.py  types.py
browserlens/core/: __init__.py  lens.py  types.py
browserlens/differ/: __init__.py  differ.py  semantic_filter.py  snapshot_store.py  tree_diff.py
browserlens/extractors/: __init__.py  _cdp.py  a11y.py  base.py  dom.py  hybrid.py  vision.py
browserlens/formatter/: __init__.py  formatter.py  ref_manager.py  token_budget.py
browserlens/router/: __init__.py  router.py  signals.py  strategies.py
tests/: test_cache.py  test_compiler.py  test_differ.py  test_executor.py  test_extractors.py  test_formatter.py  test_healer.py  test_integration.py  test_integration_live.py  test_recorder.py  test_router.py
